--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jjr-delivery",
   "version": "0.0.1",
   "description": "A Quasar Project",
-  "productName": "Quasar App",
+  "productName": "JJR Delivery",
   "author": "jpcamposgda <jpcamposgda@gmail.com>",
   "private": true,
   "scripts": {
