--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^9.0.0",
     "prettier": "^2.5.1",
+    "tailwindcss": "^3.3.3",
     "typescript": "^4.5.4"
   },
   "engines": {
